project-2-kubernetes/k8s/base/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: project-2-api
  namespace: project-2
  labels:
    app: project-2-api
spec:
  selector:
    app: project-2-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
