project-2-kubernetes/k8s/base/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: project-2
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
