project-2-kubernetes/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-2-ingress
  namespace: project-2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: project-2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-2-api
                port:
                  number: 80
